discussion/kv_engine/173099/173099_rev20_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-33549: Add tests for all EPStats

Ensure that we test that all EPStats' stats are both
initialized and reset to the correct values.

Some of these tests are currently disabled and will
be enabled in a later patch.

Change-Id: Iba1a031de27df8744311a526e3ca3b62c3bea876

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Douglas
Date: 2022-04-07 14:16:09.000000000
Message: 
Patch Set 20: Published edit on patch set 19.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-07 14:43:46.000000000
Message: 
Patch Set 20: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45076/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/stats.cc(116): error C2338: EPStats size is unexpected - have you added/removed stats? ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45076/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37864/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_engine.cc:605:39:
error: no viable overloaded "="
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37864/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16482/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/stats.cc:116:1: error: static_assert failed due to requirement "sizeof(EPStats) == 1640" "EPStats size is unexpected - have you added/removed stats?" [clang-diagnostic-error]
static_assert(sizeof(EPStats) == 1640,
^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16482/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/stats.cc:116:1:
error: static_assert failed due to requirement "sizeof(EPStats) == 1640" "EPStats size is unexpected - have you added/removed stats?" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16482/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19284/ : FAILURE

Compile error at [2022-04-07T14:37:42.911Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/stats.cc:116:1:
error: static_assert failed due to requirement "sizeof(EPStats) == 1640" "EPStats size is unexpected - have you added/removed stats?"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19284/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26663/ : FAILURE

Compile error at [2022-04-07T14:38:32.728Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/stats.cc:116:1:
error: static_assert failed due to requirement "sizeof(EPStats) == 1640" "EPStats size is unexpected - have you added/removed stats?"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26663/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6196/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6136/ : FAILURE

Compile error at [2022-04-07T14:35:50.663Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/stats.cc:116:1:
error: static_assert failed due to requirement "sizeof(EPStats) == 1640" "EPStats size is unexpected - have you added/removed stats?"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6136/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18253/ : FAILURE

Compile error at [2022-04-07T14:36:36.516Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/stats.cc:116:31:
error: static assertion failed: EPStats size is unexpected - have you added/removed stats?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18253/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17348/ : FAILURE

Compile error at [2022-04-07T14:19:37.336Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/stats.cc:116:1:
error: static_assert failed due to requirement "sizeof(EPStats) == 1640" "EPStats size is unexpected - have you added/removed stats?"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17348/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18589/ : FAILURE

Compile error at [2022-04-07T14:38:03.929Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/stats.cc:116:31:
error: static assertion failed: EPStats size is unexpected - have you added/removed stats?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18589/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15417/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
